feat: add builder api screen load save endpoints
